# sofia-ai-dataops

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SOFIA.md  context.md  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: sofia-innovation-reviewer.md  sofia-product-reviewer.md  sofia-reviewer.md  sofia-security-reviewer.md  sofia-verifier.md
.github/workflows/: ci.yml
airflow/dags/: sofia_causal_lab.py  sofia_failure_lab.py
app/: main.py
app/api/: routes.py
app/core/: config.py  schemas.py
app/mock_environment/incidents/: inc_001.json
app/mock_environment/metadata/: daily_revenue.json
app/mock_environment/quality_results/: daily_revenue.json
app/mock_environment/runbooks/: connection_timeout.json  missing_partition.json  stale_data.json
app/services/: context_service.py  incident_service.py  llm_service.py  recommendation_service.py
app/tools/: embedding_service.py  log_reader.py  metadata_reader.py  orchestrator_adapter.py  runbook_index.py  runbook_reader.py
docker/: postgres-init.sql  warehouse-init.sql
docs/: airflow-lab.md  architecture.md  product_vision.md  repository-structure.html  roadmap.md  sofia-v01-explained.html
scripts/: dev_check.sh  simulate_dag_failure.py
src/sofia_ai_dataops/: __init__.py
src/sofia_ai_dataops/agents/: __init__.py  incident_graph.py  llm.py  state.py
src/sofia_ai_dataops/api/: __init__.py  app.py  dependencies.py
src/sofia_ai_dataops/core/: __init__.py  config.py  logging.py
src/sofia_ai_dataops/db/: __init__.py  postgres.py  qdrant.py
src/sofia_ai_dataops/ingestion/: __init__.py  airflow.py
src/sofia_ai_dataops/observability/: __init__.py  events.py  metrics.py
src/sofia_ai_dataops/schemas/: __init__.py  airflow.py  health.py  incidents.py
tests/: conftest.py  test_context_service.py  test_incident_service.py  test_runbook_index.py
tests/evals/: __init__.py  test_classification_accuracy.py
tests/fixtures/: eval_incidents.jsonl
tests/integration/: test_full_pipeline.py
tests/unit/: test_airflow_ingestion.py  test_dashboard.py  test_health.py  test_incident_nodes.py  test_incident_repository.py  test_memory_routes.py  test_memory_service.py  test_metrics.py  test_qdrant_vector_store.py
(+19 files in other folders)
